PremiumWrapper: Fix visibility for premium users

--- a/hsreplaynet/static/styles/base.scss
+++ b/hsreplaynet/static/styles/base.scss
@@ -310,26 +310,6 @@ body, html {
 		z-index: 101;
 	}
 
-	.premium-info {
-		align-items: center;
-		background: rgba(0, 0, 0, 0.7);
-		color: white;
-		display: flex;
-		flex-direction: column;
-		height: 100%;
-		justify-content: center;
-		opacity: 0;
-		position: absolute;
-		text-align: center;
-		transition: opacity 0.2s linear;
-		width: 100%;
-		z-index: 100;
-
-		h4 {
-			font-weight: bold;
-		}
-	}
-
 	.info-icon {
 		font-size: 1.2em;
 		padding: 8px;
@@ -340,8 +320,34 @@ body, html {
 		cursor: help;
 	}
 
-	&.visible .premium-info {
-		cursor: pointer;
+	.premium-info {
+		display: none;
+	}
+
+	&.visible {
+		.premium-info {
+			align-items: center;
+			background: rgba(0, 0, 0, 0.7);
+			color: white;
+			display: flex;
+			flex-direction: column;
+			height: 100%;
+			justify-content: center;
+			opacity: 0;
+			position: absolute;
+			text-align: center;
+			transition: opacity 0.2s linear;
+			width: 100%;
+			z-index: 100;
+
+			h4 {
+				font-weight: bold;
+			}
+		}
+
+		.premium-info {
+			cursor: pointer;
+		}
 	}
 
 	&.hovering .premium-info {
